--- a/index.html
+++ b/index.html
@@ -1950,7 +1950,7 @@ Item added to your cart
           
             data-cascade
           
-        ><div class="footer-block__newsletter"><h2 class="footer-block__heading inline-richtext">SEO PJP</h2><form method="post" action="/contact#ContactFooter" id="ContactFooter" accept-charset="UTF-8" class="footer__newsletter newsletter-form"><input type="hidden" name="form_type" value="customer" /><input type="hidden" name="utf8" value="✓" /><input type="hidden" name="contact[tags]" value="newsletter">
+        ><div class="footer-block__newsletter"><h2 class="footer-block__heading inline-richtext">SEO WAHYU</h2><form method="post" action="/contact#ContactFooter" id="ContactFooter" accept-charset="UTF-8" class="footer__newsletter newsletter-form"><input type="hidden" name="form_type" value="customer" /><input type="hidden" name="utf8" value="✓" /><input type="hidden" name="contact[tags]" value="newsletter">
                 <div class="newsletter-form__field-wrapper">
                   <div class="field">
                     <input
