--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="theme-color" content="">
-    <meta name="google-site-verification" content="mQCFcF4L7gRrEmIi37G-cVg3rIlY6DsKKoEQNmZLc7E" />
-    <link rel="amphtml" href="https://bocilsenpai.my.id/iya/">
+    <meta name="google-site-verification" content="lGTKAFN5O3vcueEj3v8uk9r4nH7rGuIajov8wdLahZ8" />
+    <link rel="amphtml" href="https://sayamaumainjuga.my.id/iya/">
     <link rel="canonical" href="http://hoki188resmi.arrayfire.org/">
     <link rel="preconnect" href="https://fonts.shopifycdn.com" crossorigin>
     <title> HOKI188🐴 Bandar Judi Slot Gacor Anti Rungkad Terbaik </title>
